# cola2_core

./: .gitignore  README.md  check_repos.sh
cola2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
cola2_control/cfg/: Pilot.cfg
cola2_control/scripts/: actuators_setpoint.py  star.py
cola2_control/src/: captain.cpp  captain.py  keyboard.cpp  keyboard_to_teleoperation.py  logitech_fx10.py  logitech_fx10_to_teleoperation.py  map_ack.py  move_mode.py  pilot.cpp  pilot.py  target_reacquisition.py  teleoperation.py
cola2_control/src/controllers/: anchor.cpp  dubins.hpp  goto.hpp  holonomic_goto.hpp  los_cte.hpp  mission_types.hpp  path.hpp  types.hpp
cola2_core/: CHANGELOG.rst  package.xml
cola2_lib/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
cola2_lib/include/cola2_lib/: SGDerivation.h  SGDerivation.hpp  cola2_util.h
cola2_lib/include/cola2_lib/cola2_control/: IAUVController.h  IAUVController.hpp  IAUVROSController.h  IAUVROSController.hpp  IController.h  IController.hpp  Merge.h  Merge.hpp  Model.h  Model.hpp  NDofController.h  NDofController.hpp  Pid.h  Pid.hpp  Poly.h  Poly.hpp  Request.h  Request.hpp  RobustifyingTerms.h  RobustifyingTerms.hpp
cola2_lib/include/cola2_lib/cola2_io/: CCamera.h  ISerialPort.h  SerialPort.h  TcpSocket.h  UdpSocket.h  UdpSocket.hpp
cola2_lib/include/cola2_lib/cola2_navigation/: EkfBase.h  EkfBase.hpp  EkfRosBase.h  EkfRosBase.hpp  EkfSlamAuv.h  EkfSlamAuv.hpp  Ned.h  Ned.hpp  nav_utils.h  transformations.h
cola2_lib/include/cola2_lib/cola2_rosutils/: DiagnosticHelper.h  RosParamLoader.h  RosUtil.h
cola2_lib/launch/: bag.launch
cola2_lib/src/: bag_node.py  mission_wait.py
cola2_lib/src/cola2_lib/: JoystickBase.py  NED.py  SGDerivation.cpp  __init__.py  cola2_lib.py  cola2_ros_lib.py  cola2_util.cpp  diagnostic_helper.py
cola2_lib/src/cola2_lib/cola2_control/: IAUVController.cpp  IAUVROSController.cpp  IController.cpp  Merge.cpp  Model.cpp  NDofController.cpp  Pid.cpp  Poly.cpp  Request.cpp  RobustifyingTerms.cpp
cola2_lib/src/cola2_lib/cola2_io/: CCamera.cpp  ISerialPort.cpp  SerialPort.cpp  TcpSocket.cpp  UdpSocket.cpp
cola2_lib/src/cola2_lib/cola2_navigation/: EkfBase.cpp  EkfRosBase.cpp  EkfSlamAuv.cpp  Ned.cpp  nav_utils.cpp  transformations.cpp
cola2_lib/src/cola2_lib/cola2_rosutils/: DiagnosticHelper.cpp  RosParamLoader.cpp  RosUtil.cpp
cola2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cola2_msgs/action/: Section.action  WorldPathReq.action  WorldSectionReq.action  WorldWaypointReq.action
cola2_msgs/cfg/: ImagenexDeltaT.cfg  SafeDepthAltitude.cfg  Safety.cfg  VirtualCageInfo.cfg  tritech_msis.cfg
cola2_msgs/msg/: AdisImu.msg  CaptainStatus.msg  ComputerData.msg  DigitalOutput.msg  EmusBms.msg  FastraxIt500Gps.msg  ImagenexSSS.msg  ImuAngleEstimatorInfo.msg  LinkquestDvl.msg  MissionStatus.msg  RangeDetection.msg  RangeImageBeam.msg  SeaEyeData.msg  Section.msg  SonarInfo.msg  TeledyneExplorerDvl.msg  ThrustersInfo.msg  TritechIGCGyro.msg  ValeportSoundVelocity.msg  VehicleStatus.msg
cola2_msgs/srv/: ArisConfig.srv  DeltaTConfig.srv  GetLandmark.srv  Goto.srv  GotoWithYaw.srv  ImagenexSSSConfig.srv  MissionTimeout.srv  NewGoto.srv  OldGoto.srv  PantiltAngle.srv  RecoveryAction.srv  SetRotativePayloadAngle.srv  SetTrajectory.srv  SetVelocitiesLOS.srv  String.srv  StringList.srv  Submerge.srv
cola2_safety/: CHANGELOG.rst  CMakeLists.txt  package.xml
cola2_safety/src/: check_sensors.py  computer_logger.py  diagnostics_supervisor.py  param_logger.py  recovery_actions.py  safe_depth_altitude.py  safety_supervisor.py  set_pose.py  set_zero_velocity.py  test_thrusters.py  trap_avoidance.py  up_time.py  virtual_cage.py
cola2_sim/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cola2_sim/src/: dynamics.py  sim_dvl.py  sim_gps.py  sim_profiler.py  sim_usbl.py  sim_vessel.py
